tests/baselines/reference/importAttributes6(module=nodenext).errors.txt
mod.mts(3,52): error TS1005: ',' expected.
mod.mts(3,53): error TS1005: ':' expected.
mod.mts(3,54): error TS1005: ',' expected.
mod.mts(3,56): error TS1005: ':' expected.
mod.mts(3,57): error TS1005: ',' expected.
mod.mts(4,8): error TS1005: ':' expected.
mod.mts(4,10): error TS1005: ',' expected.
mod.mts(4,13): error TS1005: ':' expected.
mod.mts(4,20): error TS1005: ',' expected.
mod.mts(4,25): error TS1005: ':' expected.
mod.mts(4,37): error TS1005: ',' expected.
mod.mts(4,42): error TS1005: ':' expected.
mod.mts(4,44): error TS1005: ',' expected.
mod.mts(4,52): error TS1005: ',' expected.
mod.mts(4,55): error TS1005: ':' expected.
mod.mts(5,53): error TS1005: ',' expected.
mod.mts(5,60): error TS1128: Declaration or statement expected.
mod.mts(6,67): error TS1005: ',' expected.
mod.mts(6,76): error TS1005: ':' expected.
mod.mts(6,77): error TS1005: ',' expected.


==== mod.mts (20 errors) ====
    import * as thing1 from "./mod.mjs" with { field: 0 };
    import * as thing2 from "./mod.mjs" with { field: `a` };
    import * as thing3 from "./mod.mjs" with { field: /a/g };
                                                       ~
!!! error TS1005: ',' expected.
                                                        ~
!!! error TS1005: ':' expected.
                                                         ~
!!! error TS1005: ',' expected.
                                                           ~
!!! error TS1005: ':' expected.
                                                            ~
!!! error TS1005: ',' expected.
    import * as thing4 from "./mod.mjs" with { field: ["a"] };
           ~
!!! error TS1005: ':' expected.
             ~~
!!! error TS1005: ',' expected.
                ~~~~~~
!!! error TS1005: ':' expected.
                       ~~~~
!!! error TS1005: ',' expected.
                            ~~~~~~~~~~~
!!! error TS1005: ':' expected.
                                        ~~~~
!!! error TS1005: ',' expected.
                                             ~
!!! error TS1005: ':' expected.
                                               ~~~~~
!!! error TS1005: ',' expected.
                                                       ~~~
!!! error TS1005: ',' expected.
                                                          ~
!!! error TS1005: ':' expected.
    import * as thing5 from "./mod.mjs" with { field: { a: 0 } };
                                                        ~
!!! error TS1005: ',' expected.
                                                               ~
!!! error TS1128: Declaration or statement expected.
    import * as thing6 from "./mod.mjs" with { type: "json", field: 0..toString() };
                                                                      ~
!!! error TS1005: ',' expected.
                                                                               ~
!!! error TS1005: ':' expected.
                                                                                ~
!!! error TS1005: ',' expected.
    